Resolves: fdo#55367 wrong convertion factor for "tspm"

Change-Id: If37ef46ab009b9886fefd0ca071bd81dd68e25fc